add PHNI 幻魔の召唤神 移除已经正式更新的卡 修改ini内容

--- a/corres_srv.ini
+++ b/corres_srv.ini
@@ -1,2 +1,9 @@
-超先行内测与平衡性探究
-exp.baldlee.top:23333
+[YGOProExpansionPack]
+FileName = pre-release-database-cdb.ypk
+PackName = 巧克力布丁拼盘
+PackAuthor = 星光
+PackHomePage = https://mycard.moe/
+[YGOMobileAddServer]
+ServerName = 超先行内测与平衡性探究
+ServerHost = exp.baldlee.top
+ServerPort = 23333
