萌卡超先行服

--- a/corres_srv.ini
+++ b/corres_srv.ini
@@ -1,9 +1,9 @@
 [YGOProExpansionPack]
-FileName = pre-release-database-cdb.ypk
-PackName = 巧克力布丁拼盘
-PackAuthor = 星光
+FileName = ygopro-super-pre.ypk
+PackName = ygopro-super-pre
+PackAuthor = Mycard
 PackHomePage = https://mycard.moe/
 [YGOMobileAddServer]
-ServerName = 超先行内测与平衡性探究
-ServerHost = exp.baldlee.top
-ServerPort = 23333
+ServerName = 萌卡超先行
+ServerHost = mygo.superpre.pro
+ServerPort = 888
