Update packs by tag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ pack:
     - mv test-release.json data/
     - git show -s --format=%ct $CI_COMMIT_SHA > data/version.txt
     - cd data
-    - 7z a -mx9 ../archive/ygopro-super-pre.zip pics script *.cdb *.conf *.ini
+    - 7z a -mx9 ../archive/ygopro-super-pre.zip pics script tag *.cdb *.conf *.ini
     - cd ..
     - mv archive/ygopro-super-pre.zip archive/ygopro-super-pre.ypk
     - cp archive/ygopro-super-pre.ypk archive/ygopro-super-pre-$CI_COMMIT_REF_NAME.ypk
