--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ merge_databases:
     - linux
   script:
     - apt update && apt -y install sqlite3
-    - ls cdbs/test-release.cdb | xargs -I '{}' sqlite3 '{}' .dump | sqlite3 > test-release.cdb
+    - ls cdbs/test-release.cdb | xargs -I '{}' sqlite3 '{}' .dump | sqlite3 test-release.cdb
   artifacts:
     paths:
       - test-release.cdb
