--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ merge_databases:
     FIELDS: 'name,desc,overallString,picUrl'
     GIT_DEPTH: '1000'
     OUTPUT_FILENAME: test-release.json
-    REF_COMMIT: '1.78' # 更新的时候改这里，修改成上一个tag的版本号
+    REF_COMMIT: '2.0' # 更新的时候改这里，修改成上一个tag的版本号
   script:
     - apt update;apt -y install wget
     - currentPath=$PWD
@@ -71,7 +71,7 @@ json:
 json2:
   extends: .json
   variables:
-    FIELDS: 'name,desc,overallString,picUrl,createTime,createCommit,updateTime,updateCommit,created,updated'
+    FIELDS: 'id,name,desc,overallString,picUrl,createTime,createCommit,updateTime,updateCommit,created,updated'
     OUTPUT_FILENAME: test-release-v2.json
   artifacts:
     paths:
