--- a/test-strings.conf
+++ b/test-strings.conf
@@ -1,6 +1,6 @@
 #The first line is used for comment
 !counter 0x6b 狂乱指示物
-!counter 0x6c 访问指示物
+!counter 0x6c 访问数指示物
 !setname 0x2ae 千年
 !setname 0x2af 艾格佐德
 !setname 0x2b0 刻魔
