--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ merge_databases:
     FIELDS: 'name,desc,overallString,picUrl'
     GIT_DEPTH: '1000'
     OUTPUT_FILENAME: test-release.json
-    REF_COMMIT: '4.8' # 更新的时候改这里，修改成上一个tag的版本号
+    REF_COMMIT: '4.9' # 更新的时候改这里，修改成上一个tag的版本号
   script:
     - apt update;apt -y install wget
     - currentPath=$PWD
@@ -215,7 +215,7 @@ deploy:
     SERVER_PATH: ~/ygopro-super-pre/expansions
   script:
     - apt update && apt -y install openssh-client rsync coreutils
-    - mkdir ~/.ssh
+    - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - ssh-keyscan $SERVER_HOST >> ~/.ssh/known_hosts
     - echo $NANAHIRA_SSH_KEY | base64 --decode > ~/.ssh/id_rsa
