--- a/corres_srv.ini
+++ b/corres_srv.ini
@@ -5,5 +5,6 @@ PackAuthor = Mycard
 PackHomePage = https://mycard.moe/
 [YGOMobileAddServer]
 ServerName = 萌卡超先行
+ServerDesc = 与萌卡正式卡同步更新并提供超先行卡尝鲜
 ServerHost = mygo.superpre.pro
 ServerPort = 888
