--- a/corres_srv.ini
+++ b/corres_srv.ini
@@ -4,7 +4,7 @@ PackName = ygopro-super-pre
 PackAuthor = Mycard
 PackHomePage = https://mycard.moe/
 [YGOMobileAddServer]
-ServerName = 萌卡超先行
+ServerName = 萌卡超先行2区
 ServerDesc = 与萌卡正式卡同步更新并提供超先行卡尝鲜
-ServerHost = mygo.superpre.pro
+ServerHost = mygo2.superpre.pro
 ServerPort = 888
