--- a/test-strings.conf
+++ b/test-strings.conf
@@ -1,5 +1,5 @@
 #The first line is used for comment
 !setname 0x2c3 追光☆姐妹
 !setname 0x2c4 喷水引擎
-!setname 0x2c5 迪亚贝尔
-
+!setname 0x19b 迪亚贝尔	ディアベル
+!setname 0x119b 迪亚贝尔斯塔尔	ディアベルスター
