--- a/test-strings.conf
+++ b/test-strings.conf
@@ -3,4 +3,5 @@
 !setname 0x2c4 喷水引擎
 !setname 0x19b 迪亚贝尔	ディアベル
 !setname 0x119b 迪亚贝尔斯塔尔	ディアベルスター
-
+!setname 0x19 剑斗	グラディアル
+!setname 0x1019 剑斗兽	剣闘獣
