--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,11 @@ merge_databases:
   image: git-registry.mycard.moe/mycard/ygopro-cdb-descgen:master-x86
   variables:
     YGOPRO_PIC_URL_PREFIX: 'https://cdn02.moecube.com:444/ygopro-super-pre/data/pics/'
-    YGOPRO_PIC_URL_SUFFIX: '.jpg?version3.0.0'
+    YGOPRO_PIC_URL_SUFFIX: '.jpg?version=8.26'
     FIELDS: 'name,desc,overallString,picUrl'
     GIT_DEPTH: '1000'
     OUTPUT_FILENAME: test-release.json
-    REF_COMMIT: '8.24' # 更新的时候改这里，修改成上一个tag的版本号
+    REF_COMMIT: '8.25' # 更新的时候改这里，修改成上一个tag的版本号
   script:
     - apt update;apt -y install wget
     - currentPath=$PWD
