--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ merge_databases:
   tags:
     - linux
   script:
-    - apt update && apt -y install sqlite3
+    - apt update --allow-insecure-repositories && apt -y install sqlite3
     - ls -1 *.cdb | sed -e '/test-update.cdb/d' -e '/script-fix.cdb/d' | xargs -I '{}' sqlite3 '{}' .dump | sqlite3 test-release.cdb || true
   artifacts:
     paths:
