--- a/test-strings.conf
+++ b/test-strings.conf
@@ -1,7 +1,7 @@
 ﻿#The first line is used for comment
 !setname 0x1c3 巳剑	Mitsurugi
 !counter 0x6e 四季指示物
-!counter 0x106e 少女指示物
+!counter 0x106f 少女指示物
 !setname 0x2cc 瞬间移动
 !setname 0x2cd 神艺
 !setname 0x2ce 狱神
