--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -29,5 +29,6 @@ jobs:
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
-          git push origin HEAD:master --force
+          git remote remove origin
+          git remote add origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
+          git push origin +HEAD:master --force
