--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Mirror upstream repository
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 7 * * *'
   workflow_dispatch:
 
 jobs:
