--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,6 +23,10 @@ jobs:
           git reset --hard upstream/master
           echo "SYNC_OK=true" >> $GITHUB_ENV
 
+      - name: Cleanup repository
+        working-directory: repo
+        run: git gc --prune=now
+
       - name: Push to origin
         if: env.SYNC_OK == 'true'
         working-directory: repo
@@ -31,4 +35,6 @@ jobs:
         run: |
           git remote remove origin
           git remote add origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
-          git push origin +HEAD:master --force
+          for i in {1..3}; do
+            git push origin +HEAD:master --force && break || sleep 10;
+          done
