--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Clone master branch
         run: |
+          rm -rf repo
           git clone --depth=1 --single-branch --branch master https://github.com/${{ github.repository }} repo
           cd repo
           git config user.name "Evolution Bot"
@@ -36,4 +37,4 @@ jobs:
         run: |
           git remote remove origin
           git remote add origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
-          git push origin +HEAD:master --force
+          git push origin +HEAD:master --force --verbose
