--- a/corres_srv.ini
+++ b/corres_srv.ini
@@ -2,7 +2,7 @@
 FileName = ygopro-super-pre.ypk
 PackName = ygopro-super-pre
 PackAuthor = Mycard
-PackHomePage = https://mycard.moe/
+PackHomePage = https://mycard.world/
 [YGOMobileAddServer]
 ServerName = 萌卡超先行2区
 ServerDesc = 与萌卡正式卡同步更新并提供超先行卡尝鲜
