Add blocker for sensitive scripts & readme

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,26 +7,19 @@ stages:
 variables:
   GIT_DEPTH: "1"
 
-# redtext:
-#   stage: pack
-#   dependencies: []
-#   tags:
-#     - linux
-#   image: git-registry.moenext.com/nanahira/srvpro:lite
-#   variables:
-#     DATABASE_FILE: expansions/test-release.cdb
-#   script:
-#     - apt update && apt -y install sqlite3
-#     - mv /ygopro-server/ygopro .
-#     - mkdir dist
-#     - cd ygopro
-#     - mkdir -p expansions
-#     - mv ../script expansions/
-#     - mv ../*.cdb expansions
-#     - echo "# Result of redtext test of commit $CI_COMMIT_SHA"
-#     - echo "select id from datas where type != 0x10 and (type & 0x4000) = 0;" | sqlite3 $DATABASE_FILE | xargs -I {} ./ygopro {} 2>&1 | tee ../dist/redtext.txt
-#     - cd ..
-#     - exit $(cat dist/redtext.txt | wc -l)
+fail_if_banned_files:
+  stage: prepare
+  dependencies: []
+  tags:
+    - linux
+  script: |
+    banned_files=(script/procedure.lua script/utility.lua script/constant.lua)
+    for file in "${banned_files[@]}"; do
+      if [ -f "$file" ]; then
+        echo "Banned file found: $file"
+        exit 1
+      fi
+    done
 
 merge_databases:
   stage: prepare
@@ -118,6 +111,26 @@ json2:
   artifacts:
     paths:
       - test-release-v2.json
+
+redtext:
+  stage: prepare2
+  dependencies:
+    - add_script_diff
+  tags:
+    - linux
+  image: git-registry.moenext.com/nanahira/srvpro:lite
+  script:
+    - apt update && apt -y install sqlite3
+    - mv /ygopro-server/ygopro .
+    - mkdir dist
+    - cd ygopro
+    - rm -rf expansions
+    - ln -s ../ ./expansions
+    - ls -1 ../*.cdb | xargs -I '{}' sqlite3 '{}' "select id from datas where type != 0x11 and (type & 0x4000) = 0;" | xargs -I {} -P $(nproc) bash -c './ygopro {} 2>&1 | tee ../redtext-{}.txt'
+    - cd ..
+    - cat redtext-*.txt > redtext.txt
+    # if there are any lines in redtext.txt fail the job
+    - exit $(wc -l < redtext.txt)
 
 neos:
   stage: pack
@@ -227,6 +240,9 @@ upload_version_json:
     - aws s3 --endpoint=https://minio.moenext.com:9000 cp data/version.txt s3://mycard/ygopro-super-pre/versions/$CI_COMMIT_REF_NAME/version.txt
     - aws s3 --endpoint=https://minio.moenext.com:9000 cp data/test-release.json s3://mycard/ygopro-super-pre/versions/$CI_COMMIT_REF_NAME/test-release.json
     - aws s3 --endpoint=https://minio.moenext.com:9000 cp data/test-release-v2.json s3://mycard/ygopro-super-pre/versions/$CI_COMMIT_REF_NAME/test-release-v2.json
+  only:
+    - tags
+    - master
 
 deploy:
   stage: deploy
