--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -205,7 +205,7 @@ server:
       - server-dist
 
 server_clear:
-  extends: .server
+  extends: server
   dependencies:
     - merge_databases
 
@@ -305,10 +305,8 @@ deploy_to_koishi:
     SERVER_USER: nanahira
 
 deploy_to_koishi_clear:
-  extends: .deploy_to_koishi
+  extends: deploy_to_koishi
   dependencies:
     - server_clear
   variables:
-    SERVER_HOST: koishi.momobako.com
-    SERVER_USER: nanahira
     SERVER_PATH: ~/ygopro-super-pre-clear/expansions
