--- a/test-strings.conf
+++ b/test-strings.conf
@@ -1,5 +1,6 @@
 ﻿#The first line is used for comment
 !counter 0x106f 少女指示物
+!counter 0x73 纠罪指示物
 !setname 0x2cf 树熊
 !setname 0x2d0 死伟王
 !setname 0x2d1 绚岚
@@ -8,3 +9,5 @@
 !setname 0x2d4 不可见
 !counter 0x70 龋齿指示物
 !counter 0x71 盘子指示物
+!setname 0x2d5 纠罪巧
+!counter 0x73 纠罪指示物
