--- a/test-strings.conf
+++ b/test-strings.conf
@@ -8,7 +8,7 @@
 !setname 0x2d1 绚岚
 !setname 0x2d2 奏悦机组
 !setname 0x2d3 终刻
-!setname 0x2d4 不可见
+!setname 0x2d4 不可见之手
 !setname 0x2d5 纠罪巧
 !setname 0x2d6 杀手级调整曲
 !setname 0x2d7 艾克莉西娅
