--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,22 @@ add_script_diff:
     paths:
       - script
 
+minify_script:
+  stage: prepare2
+  dependencies:
+    - add_script_diff
+  tags:
+    - linux
+  image: git-registry.moenext.com/nanahira/ygopro-lua-minify
+  script:
+    - currentPath=$PWD
+    - cd /usr/src/app
+    - npm start $currentPath/script
+    - cd $currentPath
+  artifacts:
+    paths:
+      - script
+
 .json:
   stage: prepare2
   dependencies:
@@ -157,7 +173,7 @@ pack:
   stage: pack
   dependencies:
     - merge_databases
-    - add_script_diff
+    - minify_script
     - json
     - json2
   tags: 
