--- a/test-strings.conf
+++ b/test-strings.conf
@@ -1,6 +1,7 @@
 ﻿#The first line is used for comment
+!setname 0x100 结合术
 !setname 0x2d7 艾克莉西娅
 !setname 0x2d8 耀圣
 !setname 0x2d9 世界末日
-!setname 0x2da 磁石
+!setname 0x2da 磁力
 !setname 0x6066 磁石战士Σ
